@@ -47,7 +47,7 @@ int32_t SPVM__Sys__Socket__Sockaddr__In6__sin6_family(SPVM_ENV* env, SPVM_VALUE*
   
   struct sockaddr_in6* socket_address = env->get_pointer(env, stack, obj_self);
   
-  stack[0].ival = socket_address->sin6_family;
+  stack[0].bval = socket_address->sin6_family;
   
   return 0;
 }
@@ -58,7 +58,7 @@ int32_t SPVM__Sys__Socket__Sockaddr__In6__set_sin6_family(SPVM_ENV* env, SPVM_VA
   
   struct sockaddr_in6* socket_address = env->get_pointer(env, stack, obj_self);
   
-  socket_address->sin6_family = stack[1].ival;
+  socket_address->sin6_family = stack[1].bval;
   
   return 0;
 }
